nqc/src/ast/snapshots/nqc__ast__test__error_snapshot_tests.snap
---
source: nqc/src/ast/mod.rs
expression: err
input_file: nqc/tests/bad/int_fn.nqc
---
Error {
    kind: Syntax(
        "Only void functions are supported",
    ),
    span: Span {
        start: 4,
        length: 2,
    },
    raw: "int fn() {}\n",
}
