nqc/src/ast/snapshots/nqc__ast__test__snapshot_tests@empty.nqc.snap
---
source: nqc/src/ast/mod.rs
expression: ast
input_file: nqc/tests/good/empty.nqc
---
Ast {
    nodes: [],
}
