nqc/src/ast/snapshots/nqc__ast__test__snapshot_tests@global_var.nqc.snap
---
source: nqc/src/ast/mod.rs
expression: ast
input_file: nqc/tests/global_var.nqc
---
Ast {
    nodes: [
        Var(
            Var {
                span: Span {
                    start: 7,
                    length: 1,
                },
                ident: "var",
                init: None,
            },
        ),
        Var(
            Var {
                span: Span {
                    start: 18,
                    length: 1,
                },
                ident: "var2",
                init: Some(
                    Expr {
                        span: Span {
                            start: 20,
                            length: 1,
                        },
                        kind: LiteralInt(
                            "5",
                        ),
                    },
                ),
            },
        ),
    ],
}
