nqc/src/ast/snapshots/nqc__ast__test__snapshot_tests@task_with_var.nqc.snap
---
source: nqc/src/ast/mod.rs
expression: ast
input_file: nqc/tests/good/task_with_var.nqc
---
Ast {
    nodes: [
        VarList(
            VarList {
                list: [
                    Var {
                        span: Span {
                            start: 7,
                            length: 1,
                        },
                        ident: "var",
                        init: None,
                    },
                ],
            },
        ),
        Task(
            Task {
                span: Span {
                    start: 15,
                    length: 4,
                },
                ident: "main",
                block: Block {
                    span: Span {
                        start: 15,
                        length: 4,
                    },
                    nodes: [],
                },
            },
        ),
    ],
}
